<resources>
    <string name="app_name" translatable="false">SychyovMD</string>
    <string name="author_email" translatable="false">gost402@gmail.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="placeholder" translatable="false">Placeholder</string>

    <string name="launcher_theme_dark_key" translatable="false">LAUNCHER_THEME_DARK</string>
    <string name="launcher_layout_dense_key" translatable="false">LAUNCHER_LAYOUT_DENSE</string>
    <string name="launcher_sorting_type_key" translatable="false">LAUNCHER_SORTING_TYPE</string>
    <string name="launcher_not_initialized_key" translatable="false">LAUNCHER_NOT_INITIALIZED</string>

...
    <string name="preference_background_source_picsum_key" translatable="false">Lorem Picsum</string>
    <string name="preference_background_source_flickr_key" translatable="false">Lorem Flickr</string>
    <string name="preference_background_source_catapi_key" translatable="false">The Cat Api</string>
    <string name="preference_background_source_unsplash_key" translatable="false">Unsplash</string>

    <string name="author_name">Сычев Денис</string>
    <string name="next">Далее</string>
    <string name="welcome_message">Добро пожаловать</string>
    <string name="app_description">Легковесный лаунчер</string>
    <string name="light_theme_radiobutton">Светлая тема</string>
    <string name="dark_theme_radiobutton">Темная тема</string>
    <string name="standard_layout">Стандартный макет</string>
    <string name="standard_layout_description">Портретная: 4 иконки в ряд\nЛандшафтная: 6 иконки в ряд</string>
...
