...
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_step"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/next_step"
        style="@style/AppTheme.NextButton"
        android:layout_alignParentEnd="true"
...
