<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/navigation_drawer_author_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showProfileActivity"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/placeholder" />

    <TextView
        android:id="@+id/navigation_drawer_author_name"
        android:text="@string/author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigation_drawer_author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_email" />
</LinearLayout>
